agregar vista de tarea y tablero comite

--- a/static/base.css
+++ b/static/base.css
@@ -13,6 +13,7 @@
 @import url(visualizarDatos.css);
 @import url(asignar_comite.css);
 @import url(sesion_comite.css);
+@import url(tarea.css);
 
 :root {
     --primary-color: #231f20;
