vista de tableocomite

--- a/app/templates/tablerocomite.html
+++ b/app/templates/tablerocomite.html
@@ -32,7 +32,6 @@
         <div><input type="date" name=""></div>
     </section>
     <section class="description">
-        <label>Descripcion</label>
         <div><input type="text" placeholder="Descripcion"></div>
     </section>
     <div class="avance">
@@ -51,7 +50,7 @@
     </div>
     <section ip="persona" class="cont_fotos">
         <div>
-            <input type="file" id="fileInput">
+            <input class="seleccionart" type="file" id="fileInput">
             <button id="uploadButton">Cargar</button>
         </div>
         <div id="filePreview"></div>
