--- a/app/static/tablerocomite.css
+++ b/app/static/tablerocomite.css
@@ -18,7 +18,7 @@
 .tarea {
     position: relative;
     left: 26%;
-    top: 205px;
+    top: 195px;
     margin-top: 55px;
     display: grid;
     color: var(--white);
@@ -65,18 +65,19 @@
 
 .InicioF input {
     background-color: var(--gray_secondary-color);
-    color: var(--white);
-    width: 260px;
+    color: var(--black);
+    width: 200px;
     position: relative;
     left: 19%;
     top: 250px;
+    
 
 }
 
 .FinalF input {
     background-color: var(--gray_secondary-color);
-    color: var(--white);
-    width: 260px;
+    color: var(--black);
+    width: 200px;
     position: relative;
     left: 35%;
     top: 202px;
@@ -85,21 +86,21 @@
 
 .description input {
     background-color: var(--gray_secondary-color);
-    /* color: var(--white);  */
     position: relative;
-    left: 26.5%;
-    top: 253px;
+    left: 24%;
+    top: 220px;
     width: 40%;
     height: 50%;
     max-width: 300px;
     padding: 15px;
     border-radius: 25px;
+
 }
 
 .avance {
     position: relative;
     left: 19%;
-    top: 240px;
+    top:175px;
     margin-top: 55px;
     display: grid;
     color: var(--white);
@@ -123,7 +124,7 @@
     padding: 20px;
     height: 20px;
     max-width: 500px;
-    color: var(--white);
+    color: var(--black);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -140,15 +141,31 @@
 .cont_fotos {
     position: relative;
     left: 19%;
-    top: 318px;
+    top: 235px;
     width: 424px;
     height: 35px;
     padding: 2px;
     background-color: var(--white);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
-
+.seleccionart {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.cont_fotos button{
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
 input::placeholder {
     color: var(--white);
+    
 }
 
 .list {
@@ -156,20 +173,18 @@ input::placeholder {
     text-align: center;
     position: absolute;
     left: 58%;
-    top: 305px;
+    top: 250px;
 }
 
 .cont_militantes {
-    border-radius: 35px;
-    width: 295px;
-    /*ancho del elemento*/
-    height: 220px;
-    max-width: 500px;
-    background-color: var(--gray_secondary-color);
-    padding: 15px;
-    /*es el espacio que existe entre el texto y recuadro*/
-    text-align: center;
-    position: relative;
-    left: 57%;
-    top: 75px;
+  height: 220px;
+  width: 295px;
+  border-radius: 35px;
+  max-width: 500px;
+  background-color: var(--gray_secondary-color);
+  padding: 15px;
+  text-align: center;
+  position: relative;
+  left: 57%;
+  top: 25px;
 }
