--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -15,9 +15,9 @@
     padding: 6px;
     text-align: center;
 }
-.row{
+/* .row{
     background-color: var(--secondary-color);
-}
+} */
 
 .fa-solid.fa-magnifying-glass{
     color: #f2f2f2;
