--- a/app/templates/address_form.html
+++ b/app/templates/address_form.html
@@ -8,71 +8,70 @@
 {% block content %}
 <main>
     <section class="address_container">
-        <div class="container_direc">
-            <div class="row align-items-start">
-                <strong class="titulo">
-                    <h4> Dirección </h4>
-                </strong>
+        <div class="container text-center">
+            <strong class="titulo">
+                <h4> Dirección </h4>
+            </strong>
+            <div class="row  ">
                 <div class="col">
                     <label>
                         <p>Calle:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input class="input_address"   id="name" name="name" required />
                     </label>
                 </div>
                 <div class="col">
                     <label>
                         <p>Numero exterior:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
             </div>
-            <div class="row align-items-start">
+            <div class="row  ">
                 <div class="col">
                     <label>
                         <p>Numero interior:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
                 <div class="col">
                     <label>
                         <p>Colonia:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
             </div>
-            <div class="row align-items-start">
+            <div class="row  ">
                 <div class="col">
                     <label>
                         <p>Municipio/Alcaldia:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
                 <div class="col">
                     <label>
                         <p>Estado:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
             </div>
-            <div class="row align-items-start">
+            <div class="row  ">
                 <div class="col">
                     <label>
                         <p>Codigo postal:</p>
-                        <input type="addres" id="name" name="name" required />
+                        <input   id="name" name="name" required />
                     </label>
                 </div>
             </div>
 
-            <div class="row align-items-start">
-                <div class="back">
-                    <button>Atras</button>
+            <div class="row  ">
+                <div class="col my-3">
+                    <button class="button-standar">Atras</button>
+                </div>
+                <div class="col my-3">
+                    <button class="button-standar">Siguiuente</button>
                 </div>
             </div>
-            <div class="row align-items-start">
-                    <div class="next">
-                    <button>Siguiente</button>
-                </div>
-            </div>
+            
         </div>
     </section>
 </main>
