--- a/app/static/Trayectoria.css
+++ b/app/static/Trayectoria.css
@@ -1,217 +1,64 @@
 
-header {
-    background-color: #640909;
-    
-    .content {
-      min-height: 80px;
-      background: var(--primary-color);
-    }
-    .menu {
-      position: absolute;
-      top: 10px;
-      left: 0;
-      right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .menu-logo {
-      height: 15px;
-    }
-    .logo {
-      font-size: 50px;
-      color: #ffff;
-      text-transform: uppercase;
-    }
-    .menu .navbar ul li {
-      position: relative;
-      float: left;
-    }
-    .menu .navbar ul li a {
-      font-size: 18px;
-      padding: 20px;
-      color: #dedede;
-      display: block;
-      font-weight: bold;
-    }
-    .menu .navbar ul li a:hover {
-      color: #ffff;
-    }
-    #menu {
-      display: none;
-    }
-    .menu-icono {
-      width: 25px;
-    }
-    .menu label {
-      cursor: pointer;
-      display: none;
-    }
-    .header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .contenedor {
-      position: relative;
-      left: 500px;
-      top: 50px;
-    }
-    .contenedor {
-      width: 90%;
-      max-width: 300px;
-      background: #fff;
-      padding: 25px;
-      margin: 50px;
-      box-shadow: 0px 1px 2px rgba(248, 0, 0, 0.5);
-      align-items: center;
-    }
-    .contenedor h1 {
-      font-size: 30px;
-      font-weight: 600;
-      text-align: center;
-      margin-bottom: 25px;
-      color: #640909;
-    }
-    .contenido {
-      display: flex;
-      width: 250%;
-      overflow: hidden;
-    }
-    .contenido .info {
-      width: 35%;
-    }
-    .contenido .formulario {
-      width: 35%;
-    }
-    
-  }
- 
-  input[type=text  ]{
-    color: black;
-    width: 77%;
-    height: 10px;
-    max-width: 300px;
-    background-color: #D2C7C7;
-    padding: 15px;
-    border-radius: 25px;
-    position: relative;left: 10px;top:20px;
-  }
-  input[type=int  ]{
-    color: black;
-    width: 72%;
-    height: 10px;
-    max-width: 300px;
-    background-color: #D2C7C7;
-    padding: 15px;
-    border-radius: 25px;
-    position: relative;left: 10px;top:20px;
-  }
-  
-  
-  .Contenedor{
-    display: flex;
-    flex:content;
-    flex-direction: center;
-    justify-content: center;
-    text-align: center;
-    
-  }
-  .columna{
-    background-color: #e1e1e1;
-    justify-content:center;
-    padding:25px;
-    margin: 0 10px;
-    text-align: center;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    width: 900px;
-    height: 600px;
-    
-    
-  }
 
-  footer{
-    display: flex;
-    justify-content: center;
-  }
-  
-  
-  
-  .texth2{
-    text-align: center;
-     
-    color:  #231f20;  
-  }
-  placeholder{
-    color: #8B0000;
-  }
-  input[type=bottom]{
-    color: #fff;
-    width: 42%;
-    height: 10px;
-    max-width: 300px;
-    background-color: #D9D9D9;
-    padding: 15px;
-    border-radius: 50px;
-    position: relative;left: 10px;top: 20px;
-  }
+/* Contenedor principal centrado */
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  .bottom{
-    display: block;
-    width: 90px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    border-radius: 10px;
-    margin: 15px 30px;
-    text-decoration: none;
-    color: #fff;
-    background-color: #8B0000;
-    text-align: center;
-    position:bottom;
-  }
-  .bottom:hover{
-    background-color: transparent;
-    border: 2px solid #8B0000;
-    color: #8B0000;
-  }
-  form{
-    display: block;
-    width: 90px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    border-radius: 10px;
-    margin: 15px 30px;
-    text-decoration: none;
-    color: #fff;
-    background-color: #e1e1e1;
-    text-align: center
-    
-  }
-  .botons{
-    display: flex;
-    position:Right;
-    position:Bottom ;
-    justify-content: center;
-    justify-content: space-between;
-    align-items:flex-end;
+/* Caja del formulario */
+.contenedor {
+  background-color: #e1e1e1;
+  padding: 25px;
+  border-radius: 25px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 800px;
+  height: 800px;
+  text-align: center;
+}
 
-    
-  }
-  
-  
-  
-  select{
-    border:none;
-    padding: 10px 20px;
-    border-radius:75px;
-    background-color: #D2C7C7;
-    ;
-    color: #231f20;
-    
-  }
-  
-  select:focus{
-    outline:none;
-  }
+/* Título del formulario */
+.texth2 {
+  color: #640909;
+  margin-bottom: 20px;
+}
+
+/* Estilos de los inputs y select */
+input[type="text"], input[type="date"], select {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: #ca2525;
+  font-size: 16px;
+}
+
+/* Estilos de los botones */
+.botons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bottom {
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #640909;
+  font-weight: bold;
+}
+
+.bottom:hover {
+  background-color: transparent;
+  border: 2px solid #640909;
+  color: #640909;
+}
+.form-group {
+  margin-bottom: 15px;
+}
