--- a/app/templates/Trayectoria.html
+++ b/app/templates/Trayectoria.html
@@ -17,31 +17,33 @@
           
           <h2 class="texth2">Trayectoria</h2>
           <br>
-            <div class="form-group">
+            <div >
             {{ form.name.label }}
-            {{ form.name(size=30) }}<br>
+            {{ form.name(size=20) }}<br>
             {% for error in form.name.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
             </div>
-            <div class="form-group">
+            <div >
               {{ form.role.label }}
               {{ form.role }}<br>
               {% for error in form.role.errors %}
               <span style="color: red;">{{ error }}</span>
               {% endfor %}
             </div>  
-            <div class="form-group">
+            <div >
               {{ form.dateinicio.label }}
               {{ form.dateinicio(aria_label="Fecha de inicio") }}<br>
               {% for error in form.dateinicio.errors %}
               <span class="error">{{ error }}</span>
               {% endfor %}
             </div>
+            <footer>
             <div class="botons">
               <a class="bottom" href="https://www.google.com.mx" target="blank">Atras</a>
               <a class="bottom" href="https://www.google.com.mx" target="blank">Siguiente</a>
             </div>
+          </footer>
         </form>
       </div>
   </main>
