--- a/app/templates/Direccion.html
+++ b/app/templates/Direccion.html
@@ -83,6 +83,8 @@
           <div class="Contenedor">
                 <div class="columna">
                     <h2>Direccion</h2>
+
+                    <div class="botons">
                     <label
                         ><input type="text" name="Calle" placeholder="Calle*"
                     /></label>
@@ -93,7 +95,8 @@
                         name="Numero exterior"
                         placeholder="Numero exterior*"
                     /></label>
-
+                    </div>
+                    <div class="botons">
                     <label
                         ><input
                         type="text"
@@ -104,9 +107,9 @@
                     <label
                         ><input type="text" name="Colonia" placeholder="Colonia*"
                     /></label>
+                    </div>
                     
-                    
-                
+                    <div class="botons">
                     <label
                     ><input
                     type="text"
@@ -116,16 +119,19 @@
                     <label
                     ><input type="text" name="Estado" placeholder="Estado"
                     /></label>
+                    </div>
+                    <div class="botons">
                     <label
                     ><input
                     type="text"
                     name="Codigo postal"
                     placeholder="Codigo postal"
                     /></label>
-                    <div clas="map">
+                  </div>
+                  <div clas="botons">
 
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467692.39538668125!2d-46.924942846163106!3d-23.681434658029758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2sS%C3%A3o%20Paulo%2C%20Estado%20de%20S%C3%A3o%20Paulo%2C%20Brasil!5e0!3m2!1ses-419!2smx!4v1722104150081!5m2!1ses-419!2smx" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467692.39538668125!2d-46.924942846163106!3d-23.681434658029758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2sS%C3%A3o%20Paulo%2C%20Estado%20de%20S%C3%A3o%20Paulo%2C%20Brasil!5e0!3m2!1ses-419!2smx!4v1722104150081!5m2!1ses-419!2smx" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
                     <footer class="botons">
                         <a class="bottom" href="https://www.google.com.mx" target="blank">Atras</a>
                         <a class="bottom" href="https://www.google.com.mx" target="blank">Siguiente</a>
