--- a/app/templates/Trayectoria.html
+++ b/app/templates/Trayectoria.html
@@ -1,71 +1,38 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Trayectoria</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='Trayectoria.css') }}"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-
-  <body>
-    <main>
-      <!--[if lt IE 7]>
-        <p class="browsehappy">
-          You are using an <strong>outdated</strong> browser. Please
-          <a href="#">upgrade your browser</a> to improve your experience.
-        </p>
-      <![endif]-->
-
-      <header>
-        <div class="content">
-          <div class="menu container">
-            <a href="index.html" class="logo"
-              ><img src="images/logo2.png" alt=""
-            /></a>
-            <input type="checkbox" id="menu" />
-            <div class="parra"></div>
-            <label for="menu"> </label>
-            <nav class="navbar">
-              <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="DatosUsuario.html">Comite</a></li>
-                <li><a href="CerrarSesion.html">Militante</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </header>
-
+{% extends "base_template.html" %}
+{% block title %}Trayectoria{% endblock %}
+{% block header %}
+<header>
+    {% include "header.html" %}
+</header>
+{% endblock %}
+{% block content %}
+<main>
       <div class="Contenedor">
+        <form method="post" novalidate>
+          {{ form.hidden_tag() }}
         <div class="columna">
           <h2 class="texth2">Trayectoria</h2>
-          <label
-            ><input type="text" name="Nombre" placeholder="Nombre completo*"
-          /></label>
-
+            {{ form.name.label }}
+            {{ form.name(size=100) }}<br>
+            {% for error in form.name.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+            <div>
+              {{ form.role.label }}
+              {{ form.role }}<br>
+              {% for error in form.role.errors %}
+              <span style="color: red;">{{ error }}</span>
+              {% endfor %}
+            </div>  
+            <div>
+              {{ form.birth_date.label }}
+              {{ form.birth_date }}<br>
+              {% for error in form.birth_date.errors %}
+              <span style="color: red;">{{ error }}</span>
+              {% endfor %}
+            </div>
+          <div class="botons">
           <label><input type="text" name="Rol" placeholder="Rol*" /></label>
 
           <label
@@ -74,7 +41,8 @@
               name="Lugar de Adscripcion"
               placeholder="Lugar de Adscripcion*"
           /></label>
-
+          </div>
+          <div class="botons">
           <label
             ><input
               type="text"
@@ -88,13 +56,15 @@
               name="Fecha Final(rol)"
               placeholder="Fecha Final(rol)"
           /></label>
+          </div>
+          <div class="botons">
           <label
             ><input type="text" name="Fue apoyado" placeholder="Fue apoyado"
           /></label>
           <label
             ><input type="text" name="Nombre apoyo" placeholder="Nombre apoyo"
           /></label>
-       
+          </div>  
           
           <form>
             <select>
@@ -105,6 +75,7 @@
               <option>4</option>
               <option>5</option>
             </select>
+            {{ form.submit() }}
           </form>
           
           <div class="botons">
@@ -112,9 +83,9 @@
                 <a class="bottom" href="https://www.google.com.mx" target="blank">Siguiente</a>
             </div>
         </div>
+      </form>
       </div>
 
-      <script src="" async defer></script>
+     
     </main>
-  </body>
-</html>
+    {% endblock %}
